Version 3.5.4
-------------
Fix permits not loading after start

Version 3.5.3
-------------
Fix Kestrel Mk II small slots listed as medium

Version 3.5.2
-------------
Added Kestrel Mk II images and weapon slot locations (Special thanks to Fireytoad for the photoshoot)
Added Kestrel Mk II minimum thrust, boost interval and boost cost
Fixed name for Mk II Agile Boost Thrusters in ship builder showing as gravity optimized instead
Fixed name for Mk II Plasma Shock Accelerator in ship builder showing as Shock Cannon instead

Version 3.5.1
-------------
Added Kestrel Mk II Armours

Version 3.5.0
-------------
Added Kestrel Mk II - Still WIP, but armour, shields, jumprange, basic handling and speed should be alright
Added Mk II Agile Boost Thrusters - Kestrel Mk II
Added Mk II Plasma Shock Accelerator - Kestrel Mk II

Version 3.4.1
-------------
Added an additional 15K brain trees

Version 3.4.0
-------------
New permits tab where you can configure the permits you collected. (this can not be automated currently)
Added permit warning to engineer unlock information
Permit location will show in green when you have the permit set as unlocked

Version 3.3.10
-------------
Added around 6.8K brain trees and crystal shard locations so material popups show closest locations galaxy wide

Version 3.3.9
-------------
Added Colonia/Bubble filter to engineers
Fix for falsely reported minimum material required quantities due to implied remote workshop rank of 5

Version 3.3.8
-------------
Add debt state for carriers

Version 3.3.7
-------------
Add version outdated warning

Version 3.3.6
-------------
Fix handling EngineerProgress event with Odyssey engineers while in Horizons game mode

Version 3.3.5
-------------
Fix handling CAPI messages anyways that contain validation errors

Version 3.3.4
-------------
Fix processing squadron information when bank is missing
Fix showing reauthentication notification when CAPI is failing to authenticate

Version 3.3.3
-------------