@@ -249,10 +249,10 @@ public class Armour extends CoreModule {
     public static final Armour EXPLORER_NX_ARMOUR_REACTIVE = new Armour("EXPLORER_NX_ARMOUR_REACTIVE", ShipType.EXPLORER_NX, ArmourType.REACTIVE_SURFACE_COMPOSITE_ABLATIVE, HorizonsBlueprintName.REACTIVE_SURFACE_COMPOSITE_ARMOUR_ABLATIVE, ModuleSize.SIZE_1, ModuleClass.A, 459288060, "Explorer_nx_Armour_Reactive", Map.ofEntries(Map.entry(HorizonsModifier.MASS, 60.00), Map.entry(HorizonsModifier.HULL_BOOST, 2.50), Map.entry(HorizonsModifier.CAUSTIC_RESISTANCE, 0D), Map.entry(HorizonsModifier.KINETIC_RESISTANCE, 0.25), Map.entry(HorizonsModifier.THERMAL_RESISTANCE, -0.40), Map.entry(HorizonsModifier.EXPLOSIVE_RESISTANCE, 0.20), Map.entry(HorizonsModifier.MAX_GLIDE_ANGLE, 75.0), Map.entry(HorizonsModifier.MAX_GLIDE_SPEED, 3500.0)));
 
     public static final Armour SMALLCOMBAT01_NX_ARMOUR_GRADE_1 = new Armour("SMALLCOMBAT01_NX_ARMOUR_GRADE_1", ShipType.KESTREL_MK_II, ArmourType.LIGHTWEIGHT_ALLOY, HorizonsBlueprintName.LIGHTWEIGHT_ALLOY_ARMOUR, ModuleSize.SIZE_1, ModuleClass.C, 0, "smallcombat01_nx_Armour_Grade1", Map.ofEntries(Map.entry(HorizonsModifier.MASS, 0.00), Map.entry(HorizonsModifier.HULL_BOOST, .80), Map.entry(HorizonsModifier.CAUSTIC_RESISTANCE, 0D), Map.entry(HorizonsModifier.KINETIC_RESISTANCE, -0.20), Map.entry(HorizonsModifier.THERMAL_RESISTANCE, 0.0), Map.entry(HorizonsModifier.EXPLOSIVE_RESISTANCE, -0.40), Map.entry(HorizonsModifier.MAX_GLIDE_ANGLE, 75.0), Map.entry(HorizonsModifier.MAX_GLIDE_SPEED, 3500.0)));
-    public static final Armour SMALLCOMBAT01_NX_ARMOUR_GRADE_2 = new Armour("SMALLCOMBAT01_NX_ARMOUR_GRADE_2", ShipType.KESTREL_MK_II, ArmourType.REINFORCED_ALLOY, HorizonsBlueprintName.REINFORCED_ALLOY_ARMOUR, ModuleSize.SIZE_1, ModuleClass.B, 5855925, "smallcombat01_nx_Armour_Grade2", Map.ofEntries(Map.entry(HorizonsModifier.MASS, 17.00), Map.entry(HorizonsModifier.HULL_BOOST, 1.52), Map.entry(HorizonsModifier.CAUSTIC_RESISTANCE, 0D), Map.entry(HorizonsModifier.KINETIC_RESISTANCE, -0.20), Map.entry(HorizonsModifier.THERMAL_RESISTANCE, 0.0), Map.entry(HorizonsModifier.EXPLOSIVE_RESISTANCE, -0.40), Map.entry(HorizonsModifier.MAX_GLIDE_ANGLE, 75.0), Map.entry(HorizonsModifier.MAX_GLIDE_SPEED, 3500.0)));
-    public static final Armour SMALLCOMBAT01_NX_ARMOUR_GRADE_3 = new Armour("SMALLCOMBAT01_NX_ARMOUR_GRADE_3", ShipType.KESTREL_MK_II, ArmourType.MILITARY_GRADE_COMPOSITE, HorizonsBlueprintName.MILITARY_GRADE_COMPOSITE_ARMOUR, ModuleSize.SIZE_1, ModuleClass.A, 13175833, "smallcombat01_nx_armour_grade3", Map.ofEntries(Map.entry(HorizonsModifier.MASS, 35.00), Map.entry(HorizonsModifier.HULL_BOOST, 2.50), Map.entry(HorizonsModifier.CAUSTIC_RESISTANCE, 0D), Map.entry(HorizonsModifier.KINETIC_RESISTANCE, -0.20), Map.entry(HorizonsModifier.THERMAL_RESISTANCE, 0.0), Map.entry(HorizonsModifier.EXPLOSIVE_RESISTANCE, -0.40), Map.entry(HorizonsModifier.MAX_GLIDE_ANGLE, 75.0), Map.entry(HorizonsModifier.MAX_GLIDE_SPEED, 3500.0)));
-    public static final Armour SMALLCOMBAT01_NX_ARMOUR_MIRRORED = new Armour("SMALLCOMBAT01_NX_ARMOUR_MIRRORED", ShipType.KESTREL_MK_II, ArmourType.MIRRORED_SURFACE_COMPOSITE, HorizonsBlueprintName.MIRRORED_SURFACE_COMPOSITE_ARMOUR, ModuleSize.SIZE_1, ModuleClass.A, 31138881, "smallcombat01_nx_Armour_Mirrored", Map.ofEntries(Map.entry(HorizonsModifier.MASS, 35.00), Map.entry(HorizonsModifier.HULL_BOOST, 2.50), Map.entry(HorizonsModifier.CAUSTIC_RESISTANCE, 0D), Map.entry(HorizonsModifier.KINETIC_RESISTANCE, -0.75), Map.entry(HorizonsModifier.THERMAL_RESISTANCE, 0.50), Map.entry(HorizonsModifier.EXPLOSIVE_RESISTANCE, -0.50), Map.entry(HorizonsModifier.MAX_GLIDE_ANGLE, 75.0), Map.entry(HorizonsModifier.MAX_GLIDE_SPEED, 3500.0)));
-    public static final Armour SMALLCOMBAT01_NX_ARMOUR_REACTIVE = new Armour("SMALLCOMBAT01_NX_ARMOUR_REACTIVE", ShipType.KESTREL_MK_II, ArmourType.REACTIVE_SURFACE_COMPOSITE, HorizonsBlueprintName.REACTIVE_SURFACE_COMPOSITE_ARMOUR, ModuleSize.SIZE_1, ModuleClass.A, 34506038, "smallcombat01_nx_Armour_Reactive", Map.ofEntries(Map.entry(HorizonsModifier.MASS, 35.00), Map.entry(HorizonsModifier.HULL_BOOST, 2.50), Map.entry(HorizonsModifier.CAUSTIC_RESISTANCE, 0D), Map.entry(HorizonsModifier.KINETIC_RESISTANCE, 0.25), Map.entry(HorizonsModifier.THERMAL_RESISTANCE, -0.40), Map.entry(HorizonsModifier.EXPLOSIVE_RESISTANCE, 0.20), Map.entry(HorizonsModifier.MAX_GLIDE_ANGLE, 75.0), Map.entry(HorizonsModifier.MAX_GLIDE_SPEED, 3500.0)));
+    public static final Armour SMALLCOMBAT01_NX_ARMOUR_GRADE_2 = new Armour("SMALLCOMBAT01_NX_ARMOUR_GRADE_2", ShipType.KESTREL_MK_II, ArmourType.REINFORCED_ALLOY, HorizonsBlueprintName.REINFORCED_ALLOY_ARMOUR, ModuleSize.SIZE_1, ModuleClass.B, 5709527, "smallcombat01_nx_Armour_Grade2", Map.ofEntries(Map.entry(HorizonsModifier.MASS, 17.00), Map.entry(HorizonsModifier.HULL_BOOST, 1.52), Map.entry(HorizonsModifier.CAUSTIC_RESISTANCE, 0D), Map.entry(HorizonsModifier.KINETIC_RESISTANCE, -0.20), Map.entry(HorizonsModifier.THERMAL_RESISTANCE, 0.0), Map.entry(HorizonsModifier.EXPLOSIVE_RESISTANCE, -0.40), Map.entry(HorizonsModifier.MAX_GLIDE_ANGLE, 75.0), Map.entry(HorizonsModifier.MAX_GLIDE_SPEED, 3500.0)));
+    public static final Armour SMALLCOMBAT01_NX_ARMOUR_GRADE_3 = new Armour("SMALLCOMBAT01_NX_ARMOUR_GRADE_3", ShipType.KESTREL_MK_II, ArmourType.MILITARY_GRADE_COMPOSITE, HorizonsBlueprintName.MILITARY_GRADE_COMPOSITE_ARMOUR, ModuleSize.SIZE_1, ModuleClass.A, 12846437, "smallcombat01_nx_armour_grade3", Map.ofEntries(Map.entry(HorizonsModifier.MASS, 35.00), Map.entry(HorizonsModifier.HULL_BOOST, 2.50), Map.entry(HorizonsModifier.CAUSTIC_RESISTANCE, 0D), Map.entry(HorizonsModifier.KINETIC_RESISTANCE, -0.20), Map.entry(HorizonsModifier.THERMAL_RESISTANCE, 0.0), Map.entry(HorizonsModifier.EXPLOSIVE_RESISTANCE, -0.40), Map.entry(HorizonsModifier.MAX_GLIDE_ANGLE, 75.0), Map.entry(HorizonsModifier.MAX_GLIDE_SPEED, 3500.0)));
+    public static final Armour SMALLCOMBAT01_NX_ARMOUR_MIRRORED = new Armour("SMALLCOMBAT01_NX_ARMOUR_MIRRORED", ShipType.KESTREL_MK_II, ArmourType.MIRRORED_SURFACE_COMPOSITE, HorizonsBlueprintName.MIRRORED_SURFACE_COMPOSITE_ARMOUR, ModuleSize.SIZE_1, ModuleClass.A, 30360409, "smallcombat01_nx_Armour_Mirrored", Map.ofEntries(Map.entry(HorizonsModifier.MASS, 35.00), Map.entry(HorizonsModifier.HULL_BOOST, 2.50), Map.entry(HorizonsModifier.CAUSTIC_RESISTANCE, 0D), Map.entry(HorizonsModifier.KINETIC_RESISTANCE, -0.75), Map.entry(HorizonsModifier.THERMAL_RESISTANCE, 0.50), Map.entry(HorizonsModifier.EXPLOSIVE_RESISTANCE, -0.50), Map.entry(HorizonsModifier.MAX_GLIDE_ANGLE, 75.0), Map.entry(HorizonsModifier.MAX_GLIDE_SPEED, 3500.0)));
+    public static final Armour SMALLCOMBAT01_NX_ARMOUR_REACTIVE = new Armour("SMALLCOMBAT01_NX_ARMOUR_REACTIVE", ShipType.KESTREL_MK_II, ArmourType.REACTIVE_SURFACE_COMPOSITE, HorizonsBlueprintName.REACTIVE_SURFACE_COMPOSITE_ARMOUR, ModuleSize.SIZE_1, ModuleClass.A, 33643387, "smallcombat01_nx_Armour_Reactive", Map.ofEntries(Map.entry(HorizonsModifier.MASS, 35.00), Map.entry(HorizonsModifier.HULL_BOOST, 2.50), Map.entry(HorizonsModifier.CAUSTIC_RESISTANCE, 0D), Map.entry(HorizonsModifier.KINETIC_RESISTANCE, 0.25), Map.entry(HorizonsModifier.THERMAL_RESISTANCE, -0.40), Map.entry(HorizonsModifier.EXPLOSIVE_RESISTANCE, 0.20), Map.entry(HorizonsModifier.MAX_GLIDE_ANGLE, 75.0), Map.entry(HorizonsModifier.MAX_GLIDE_SPEED, 3500.0)));
 
     public static final List<Armour> ARMOURS = List.of(
             SIDE_WINDER_ARMOUR_GRADE_1,
